This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/24/24: Fixed debug output from threads not coming out gray.

2/23/24: Made FEI scope plugin and server adjust the exposure time to get the
expected number of EER frames even if camera timing hasn't been tuned; made
camera dialog show true dose including frames lost for CDS in counting mode;
put the exposure time and dose including theselost frames in the mdoc file
(In 4.1).

2/23/24: Fixed Test Multishot Positions to not apply the beam tilt adjustments
if the option is off (In 4.1).

2/23/24: Made UseNavGroupForMultishot use the group currently being acquired
when acquiring (In 4.1).

2/22/24: SEM_4-2-0beta2
2/22/24: Fixed crash starting with DebugOutput set and log window closed.

2/22/24: Kept function set with OnStopCallFunc from being called on normal
script exit (In 4.1).

2/20/24: Fixed IsImageFileOpen to make sure stored filenames of open files
were converted to full paths before testing.

2/20/24: Fixed SetupFullMontage and SetupPolygonMontage to convert filename to
full path, wait for stage move to finish, and stop on error (In 4.1).

2/19/24: Added command line argument to start with main window minimized.

2/19/24: Made it consider only files with extension .gain, .tif, or .tiff
when looking for Falcon EER gain reference (In 4.1).

2/19/14: Added script command to defer updating control panels during a series
of SetUserSettings commands.

2/17/24: To try a narrower font being considered as the default monospaced
font, place NanumGothicCoding-Regular.ttf (from Testing-4.2 download
directories) in SerialEM executable directory.

2/16/24: Added routine for measuring View or Search shift offsets using
correlations between images at different mags; added script command for