@@ -3,6 +3,11 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/27/24: Added script command to set variables for many scope state values
+without a call to the scope.
+
+2/27/24: Fixed display of beam and focus increments in Scope Control panel.
+
 2/24/24: Fixed debug output from threads not coming out gray.
 
 2/23/24: Made FEI scope plugin and server adjust the exposure time to get the
